# TFCN

comasync/: main.go
comasync-gui/: .gitignore  CMakeLists.txt
comasync-gui/src/: CMakeLists.txt  main.c  status.h
comasync-gui/src/libcomasync/src/: CMakeLists.txt  libcomasync.c  libcomasync.h
comasync/pkg/com/: com.go
comasync/pkg/gui/: init.go  status.go
comasync/pkg/serial/: config.go  crc.go  dcb.go  packet.go  serial.go  timeout.go
ethernet/: main.go
ethernet/pkg/ethernet/: channel.go  ethernet.go
ethernet/pkg/gui/: init.go  input.go  status.go  stylization.go
hamming/: main.go
hamming/pkg/gui/: init.go  notification.go
hamming/pkg/hamming/: hamming.go
libcomasync/: .gitignore  CMakeLists.txt
libcomasync/src/: CMakeLists.txt
libcomasync/tests/: CMakeLists.txt  main.c
